Added Avatar/Chi trails, chat remodle, + more

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,13 +1,12 @@
 name: ElementalEffects
 author: xNuminousx
 version: 1.0
+depend: [ProjectKorra]
 main: com.xnuminousx.elementaleffects.Main
 description: A plug-in full of different cosmetic effects for the different elements.
 
 commands:
-  elementaleffects:
-    usage: /<command>
-    description: Opens a GUI with particle trails for the elements.
   ee:
     usage: /<command>
-    description: Opens a GUI with particle trails for the elements.
+    aliases: elementaleffects
+    description: Shows a list of commands for ElementalEffects.
