some fixes before final release
-Allowed the removal of all effects at once when not specifying trail or indicator with the remove command.
-Fixed class activation when using the set command on indicators.
-Changed the name of the Hit indicators damage variable from maxDamage to critDamage.
-Fixed the setIndicator method from not applying the indicators correctly.
-Added the full list to commands to the plugin.yml. This will show up if someone runs the minecraft command /help ElementalEffects.

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -11,6 +11,26 @@ commands:
     usage: /<command>
     aliases: elementaleffects
     description: Shows a list of commands for ElementalEffects.
+  ee list [trail/indicator]:
+    usage: /<command>
+    description: Shows a list of trails or indicators.
+  ee set [name]:
+    usage: /<command>
+    aliases: ee enable
+    description: Sets a trail or indicator for yourself.
+  ee remove [trail/indicator]:
+    usage: /<command>
+    aliases: ee disable
+    description: Removes a trail/indicator.    
+  ee get [name]:
+    usage: /<command>
+    description: Gets the effect info for target.
+  ee trails:
+    usage: /<command>
+    description: Opens the trail GUI.
+  ee indicators:
+    usage: /<command>
+    description: Opens the indicator GUI.
     
 permissions:
    elementaleffects.trails.aerosphere:
