prepped the plugin for MysticEmpire
fixed the particle issues and removed the hit indicator since it wasn't needed or cooperating

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: ElementalEffects
 author: xNuminousx
-version: 3.0
+version: 3.0-MYSTIC
 api-version: 1.13
 depend: [ProjectKorra]
 main: com.xnuminousx.elementaleffects.Main
